fix(PDS-83): fix one line truncate

--- a/packages/truncate-string/src/helperComponents/TruncateStringEnd/styles.module.scss
+++ b/packages/truncate-string/src/helperComponents/TruncateStringEnd/styles.module.scss
@@ -4,8 +4,12 @@
 
   max-width: 100%;
 
-  text-overflow: ellipsis;
+  text-overflow: initial;
   white-space: nowrap;
+}
+
+.ellipsis {
+  text-overflow: ellipsis;
 }
 
 .text2AndMoreLines {
